--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Angular2 seed</title>
+  <title>Angular2 Heros Demo</title>
 </head>
 
 <body>
-  <greeting>Loading...</greeting>
+  <hero-app>Loading...</hero-app>
 </body>
 
 <script src="lib/angular2-polyfills.js"></script>
@@ -23,7 +23,7 @@
       }
     }
   });
-  System.import('app/bootstrap')
+  System.import('app/main')
         .then(null, console.error.bind(console));
 </script>
 
