--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Angular2 Heros Demo</title>
+  <link type="text/css" href="main.css" rel="stylesheet" media="screen,projection"/>
 </head>
 
 <body>
